--- a/roles/skillup-fe/tasks/main.yml
+++ b/roles/skillup-fe/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+become: yes
 # tasks file for skillup-fe
 - name: install lamp packages
   apt: "name={{ item }} state=latest update_cache=yes"
