Added log in ansible.cfg

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -15,6 +15,7 @@
  remote_user=ansible
  forks=10
  host_key_checking = False
+ log_path=/home/ansible/task.log
 #
  [privilege_escalation]
  become=true
