--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -19,3 +19,11 @@
           - curl
           - git
           - jq
+
+- name: Copy a new "log rotate" file into logrotate.d
+  ansible.builtin.copy:
+    src: /home/ansible/ansible/playbooks/roles/common/files/httpd 
+    dest: /etc/logrotate.d/httpd
+    owner: root
+    group: root
+    mode: '0644'
