--- a/playbooks/roles/skillup-be/handlers/main.yml
+++ b/playbooks/roles/skillup-be/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 # handlers file for skillup-be
 - name: start apache2
-  service: name=apache2 enabled=yes state=start
+  service: name=apache2 enabled=yes state=started
